# venusvavadiya.github.io

./: .gitignore  CHANGELOG.md  README.md  cabal.project.freeze  now.json  package-lock.json  package.json  readme.md  site.hs  venusvavadiya-github-io.cabal
.github/workflows/: static.yml
base/: ContentBox.jsx  ContentHeader.jsx  ContentList.jsx  Section.jsx
components/: ContentBox.jsx  ContentHeader.jsx  ContentList.jsx  Experience.jsx  Experiences.jsx  Footer.jsx  Header.jsx  Intro.jsx  Saperator.jsx  Section.jsx  SectionContent.jsx  SectionTitle.jsx  Skills.jsx
content/: index.js  index.md
css/: style.css
data/: index.js
layouts/: Page.jsx
pages/: index.jsx
templates/: default.html
