cabal-version:      3.0
name:               venusvavadiya-github-io
version:            0.1.0.0
license:            NONE
author:             Venus Vavadiya
maintainer:         thisisvenusvavadiya@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable site
    import:           warnings
    main-is:          site.hs
    build-depends:    base
                    , containers
                    , hakyll >= 4.17 && < 4.18
                    , pandoc >= 3.0 && < 3.11
    default-language: Haskell2010
